Bugzilla Bug 97136 Unable to load filter on space characters patch by alexey@ihug.com.au r=naving, sr=bienvenu